fixed bug where carousel container was too big

--- a/src/center-panels/Carousel.css
+++ b/src/center-panels/Carousel.css
@@ -1,6 +1,6 @@
 .carousel {
     
-    height: 98vh;
+    height: 100%;
     padding: 20px;
     overflow-y: auto;
 }
