--- a/src/center-panels/Life.css
+++ b/src/center-panels/Life.css
@@ -3,6 +3,9 @@
     height: 98vh;
     text-align: center;
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .life-container > h2 {
@@ -13,7 +16,6 @@
 .life-subcontainer {
     display: flex;
     width: 100%;
-    margin-bottom: -65px;
     overflow-y: auto;
     justify-content: center;
     padding: 10px;
